overflow-x fix (thats it)
yeah

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Island+Moments&family=Jim+Nightshade&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 * {
     font-family: "Open Sans";
+    overflow-x: hidden;
 }
 body { 
    background-color: white;
